added content of restaurant

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     </head>
     <body>
     <h1>NOORBASHA</h1>
-    <p></p>
+    <h3>AppleBees</h3>
+    <p>
+        Applebee's Restaurants LLC. is an American company that develops, franchises, and operates the 
+        Applebee's Neighborhood Grill + Bar restaurant chain. The Applebee's concept focuses on casual 
+        dining, with mainstream American dishes such as salads, chicken, pasta, burgers, and "riblets"
+         (Applebee's signature dish).
+    </p>
     </body>
 </html>
