added name of restaurant

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     </head>
     <body>
     <h1>NOORBASHA</h1>
-    <h3>AppleBees</h3>
+    <h3>Applebee's</h3>
     <p>
         Applebee's Restaurants LLC. is an American company that develops, franchises, and operates the 
         Applebee's Neighborhood Grill + Bar restaurant chain. The Applebee's concept focuses on casual 
