--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <h1>NOORBASHA</h1>
     <h3>Applebee's</h3>
     <p>
-        Applebee's Restaurants LLC. is an American company that develops, franchises, and operates the 
+        <b>Applebee's Restaurants LLC</b>. is an American company that develops, franchises, and operates the 
         Applebee's Neighborhood Grill + Bar restaurant chain. The Applebee's concept focuses on casual 
-        dining, with mainstream American dishes such as salads, chicken, pasta, burgers, and "riblets"
+        dining, with mainstream American dishes such as <b> salads, chicken, pasta, burgers, and "riblets"</b>
          (Applebee's signature dish).
     </p>
     </body>
