--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
         dining, with mainstream American dishes such as <b> salads, chicken, pasta, burgers, and "riblets"</b>
          (Applebee's signature dish).
     </p>
+    <hr>
+    <h5>Favorite Dishes</h5>
+    <ol type="1">
+        <li>chicken Noodles</li>
+        <li>chicken Manchuria</li>
+        <li>chicken Mandi</li>
+    </ol>
     </body>
 </html>
+
 
