--- a/index.html
+++ b/index.html
@@ -11,14 +11,26 @@
         dining, with mainstream American dishes such as <b> salads, chicken, pasta, burgers, and "riblets"</b>
          (Applebee's signature dish).
     </p>
-    <hr>
-    <h5>Favorite Dishes</h5>
+    <h2>Favorite Dishes</h2>
     <ol type="1">
         <li>chicken Noodles</li>
         <li>chicken Manchuria</li>
         <li>chicken Mandi</li>
     </ol>
+    <ul>
+        <ul type="1">
+        <h2>places to visit near the restaurant</h2>
+        <li>MC Donalds</li>
+        <ul> 
+            <li>It had recently opened and has wide range of varities includes food items, variety of delicious
+                burgers
+            </li>
+        </ul> 
+        <li>National Bank</li>
+        <li>KFC</li>
+        </ul>
     </body>
 </html>
+
 
 
