--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <li>National Bank</li>
         <li>KFC</li>
         </ul>
+        <a href="mymedia.html">MyMedia</a>
     </body>
 </html>
 
