--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <title>Index</title>
     </head>
     <body>
+        <a href="bonus.html">Bonus</a>
     <h1>NOORBASHA</h1>
    <h3>Applebee's</h3>
     <p>
