--- a/mymedia.html
+++ b/mymedia.html
@@ -51,13 +51,7 @@
   </pre>
   <a href="https://code.pieces.app/collections">Code Snippet</a>
 
-
-
-
-
-
-
-
+  <a href="bonus.html">Bonus</a>
 
 </body>
 
