--- a/bonus.html
+++ b/bonus.html
@@ -20,7 +20,7 @@
         <li>Sparring and Play Fights</li>
         <li>Exploration and Grazing Games</li>
         </ol>
-        <img src=""C:\Users\s572176\Downloads\Aligator image.jpg" alt="image Description" width=""300" height=""200">  
+        <img src="Aligator image.jpg" alt="image Description" width="300" height="200">  
      <p><a href="index.html">Back to index </p>
         </div>
         </section>
